team-app/main/default/objects/Waterfall_Target__c/Waterfall_Target__c.object-meta.xml
<CustomObject>
    <description>Optional override layer on a waterfall metric. History tracked; a reason is required so a change is auditable.</description>
    <label>Waterfall Target</label>
    <nameField>
        <displayFormat>WFT-{000000}</displayFormat>
        <label>Target Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waterfall Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>