team-app/main/default/objects/Waterfall_Target__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <description>AE this override applies to.</description>
    <inlineHelpText>AE this override applies to.</inlineHelpText>
    <label>AE</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>Waterfall_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>