team-app/main/default/objects/Waterfall_Target__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Upsert key: AE Id, solution (or ALL), period start, metric.</description>
    <inlineHelpText>Upsert key: AE Id, solution (or ALL), period start, metric.</inlineHelpText>
    <label>External Id</label>
    <length>80</length>
    <externalId>true</externalId>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>