team-app/main/default/objects/Waterfall_Target__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <description>Rate or plan field this override replaces, for example Win_Rate_Blended or Dials.</description>
    <inlineHelpText>Rate or plan field this override replaces, for example Win_Rate_Blended or Dials.</inlineHelpText>
    <label>Metric</label>
    <length>40</length>
    <type>Text</type>
</CustomField>