team-app/main/default/objects/Waterfall_Target__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>First day of the period this override applies to.</description>
    <inlineHelpText>First day of the period this override applies to.</inlineHelpText>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>