team-app/main/default/objects/Waterfall_Target__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Why this override exists. Required so a changed number stays auditable.</description>
    <inlineHelpText>Why this override exists. Required so a changed number stays auditable.</inlineHelpText>
    <label>Reason</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>