team-app/main/default/objects/Waterfall_Target__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>EUNA_Solution__c for a product-family override. Blank means AE blended.</description>
    <inlineHelpText>EUNA_Solution__c for a product-family override. Blank means AE blended.</inlineHelpText>
    <label>Solution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>