team-app/main/default/objects/Waterfall_Target__c/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <description>Replacement value for the named metric.</description>
    <inlineHelpText>Replacement value for the named metric.</inlineHelpText>
    <label>Target Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>